# rust-basic-stats

./: CHANGELOG.md  Cargo.toml  README.md  check-features.sh  gen-doc.sh  test-features.sh  test-hypors.sh  test-named.sh  test-no-default.sh  test.sh
R/: Bernoulli.txt  Binomial.txt  Core.txt  Welch.txt
examples/: aok.rs  bernoulli.rs  bernoulli1.rs  binomial.rs  binomial1.rs  deterministic_sample.rs  iter_with_counts.rs  moments.rs  noerr.rs  ordering_error.rs  welch.rs  wilcoxon_book_data.rs  wilcoxon_ranksum.rs  wilcoxon_rs_test.rs
src/: aok.rs  bernoulli.rs  binomial.rs  core.rs  error.rs  iter.rs  lib.md  lib.rs  normal.rs  wilcoxon.rs
src/core/: aok.rs  base.rs  check_interval.rs  deterministic_sample.rs  error.rs  iter.rs  mod.rs  noerr.rs
src/dev_utils/: approx_eq.rs  mod.rs
tests/: bernoulli_errors.rs  binomial_aok_errors.rs  binomial_errors.rs  moments_errors.rs  normal_aok.rs  normal_aok_errors.rs  normal_noerr.rs  wilcoxon_errors.rs
tests/nocover/: mod.rs
