[package]
name = "basic_stats"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Lightweight library with basic statistical estimators and hypothesis tests."
repository = "https://github.com/pvillela/rust-basic-stats/tree/main"
documentation = "https://docs.rs/basic_stats/latest/basic_stats/"
readme = "README.md"
keywords = ["statistics", "estimators", "hypothesis", "tests", "non-parametric"]
categories = ["mathematics"]
exclude = ["CHANGELOG.md", "*.sh", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.18"
# Optional:
hypors = { version = "0.2", optional = true }
polars = { version = "0.43", optional = true } # required by hypors

[features]
bernoulli = []
wilcoxon = []
all = ["bernoulli", "wilcoxon"]
# Private:
_hypors = [
    "dep:hypors",
    "dep:polars",
] # to enable testing Wilcoxon rank sum test functionality

[package.metadata.docs.rs]
all-features = true
