[package]
name = "basic_stats"
version = "1.0.1"
edition = "2024"
license = "MIT"
description = "Lightweight library with basic statistical estimators and hypothesis tests."
repository = "https://github.com/pvillela/rust-basic-stats/tree/main"
documentation = "https://docs.rs/basic_stats/latest/basic_stats/"
readme = "README.md"
keywords = ["statistics", "estimators", "hypothesis", "tests", "non-parametric"]
categories = ["mathematics"]
exclude = ["CHANGELOG.md", "*.sh", ".gitignore", "R", "tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = { version = "0.18", optional = true }

[features]
default = ["binomial", "normal", "wilcoxon"]
aok = []
binomial = ["normal"]
normal = ["dep:statrs"]
wilcoxon = ["normal"]
_dev_utils = ["aok"]                         # also used by `bench_utils` and `bench_diff`

[dev-dependencies]
old_statrs = { package = "statrs", version = "0.13" } # old version required by `statest`
statest = "0.2.2"

[package.metadata.docs.rs]
all-features = true
